<resources>
    <string name="app_name">BizTaker</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_user_name">User Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">New Register</string>
    <string name="btn_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short Or invalid format</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="permission_with_storage_message">"Contacts permissions are needed for interaction with storage."
    </string>
    <string name="title_activity_dashboard">DashboardActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="login">Login</string>
    <string name="new_registration">New Registration</string>
    <string name="permission_granted">Permission Granted</string>
</resources>
