<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="biz.biztaker.activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Login progress -->
        <android.support.v7.widget.CardView
            android:id="@+id/login_progress"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            app:cardElevation="@dimen/progressbar_elevation"
            android:layout_centerHorizontal="true"
            app:cardCornerRadius="20dp"
            android:visibility="gone" >
            <ProgressBar
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"/>
        </android.support.v7.widget.CardView>

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:contentPadding="@dimen/activity_horizontal_margin"
                app:cardElevation="@dimen/cardview_default_elevation"
                app:cardCornerRadius="4dp">

                <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/header_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_8dp"
                        android:gravity="center"
                        android:textSize="@dimen/text_18sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:text="@string/login"/>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/user_name_inputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone">

                        <AutoCompleteTextView
                            android:id="@+id/user_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_user_name"
                            android:inputType="text"
                            android:imeOptions="actionNext"
                            android:maxLines="1"/>

                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <AutoCompleteTextView
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_email"
                            android:inputType="textEmailAddress"
                            android:imeOptions="actionNext"
                            android:maxLines="1"/>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_password"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:maxLines="1"/>

                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/sign_in_button"
                        style="@style/Base.Widget.AppCompat.Button.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/action_sign_in"
                        android:textStyle="bold" />

                    <com.google.android.gms.common.SignInButton
                        android:id="@+id/googlesign_in_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <Button
                        android:id="@+id/register_button"
                        style="@style/Base.Widget.AppCompat.Button.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_8dp"
                        android:text="@string/action_register"
                        android:textStyle="bold" />

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </ScrollView>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
